Fix Spring Data JPA repository method signatures, update usages, and resolve PasswordEncoder bean injection issues for successful app startup